# digitablinum

./: .env.template  Dockerfile  LICENSE  README.md  alembic.ini  compose.yaml  main.py  requirements.txt
app/: __init__.py  auth.py  config.py  database.py  dependencies.py  i18n_service.py  ia_service.py  main.py  metadata_service.py  migrations.py  migrations_manager.py  models.py  schemas.py  utils.py
app/routers/: __init__.py  admin.py  api_data.py  auth.py  gallery.py  ia.py  users.py
app/services/: game_service.py  image_service.py  library_service.py  metadata_service.py
migrations/: env.py
migrations/versions/: 788465408584_add_game_families.py  ac8e268006a5_initial_structure.py
rust_agent/: Cargo.toml  README.md
rust_agent/src/: main.rs
rust_agent/src/api/: handlers.rs  mod.rs  router.rs
rust_agent/src/disk_manager/: iso.rs  mod.rs  workspace.rs
rust_agent/src/network/: mod.rs  smb.rs
rust_agent/src/utils/: errors.rs  helpers.rs  mod.rs  system.rs
static/css/: admin.css  base.css  gallery.css  game_view.css  generic_wizard.css  login.css  style.css
static/js/: gallery.js  game_edit_direct.js  game_edit_wizard_new.js  game_view.js  game_wizard.js  generic_wizard.js
static/locales/: en.json  fr.json
templates/: admin.html  base.html  change_password.html  debug_buttons.html  gallery.html  game_view.html  login.html
templates/components/: game_edit_modal.html  game_edit_wizard.html  generic_wizard.html
