[package]
name = "rust_local_agent"
version = "0.1.2"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["auth", "cors", "trace"] }
regex = "1.0"
winreg = "0.52"
tray-icon = "0.19"
tao = "0.30"
open = "5.3"
tracing-appender = "0.2"
directories = "5.0"

[package.metadata.wix]
upgrade-guid = "8B0D3F1E-1A2B-4C3D-8E4F-5E6A7B8C9D0F"
path-guid = "A1B2C3D4-E5F6-47A8-89A0-C1D2E3F4A5B6"
license = "README.md"
repository = "https://github.com/olituks2/pc-games-collection-dev"
